--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>CKHS72th-Class26</h1>
+<p>Working NOT In Progress</p>
 
 </body>
 </html>
